--- a/style.css
+++ b/style.css
@@ -41,3 +41,86 @@
         }
     }
 }
+
+.bg-image{
+    position: relative;
+
+    .base-image{
+        object-fit: cover;
+        width: 100%;
+        height: 85vh;
+    }
+
+    .overlay-image{
+        position: absolute;
+        top:10%;
+        right: 10%;
+    }
+
+    .overlay-text{
+        position: absolute;
+        top: 27%;
+        left: 10%;
+    }
+    h1{
+        font-family: "New Amsterdam", sans-serif;
+        font-size: 35px;
+        color: #fff;
+    }
+
+    p{
+        font-family: "New Amsterdam", sans-serif;
+        font-size: 25px;
+        color: #fff;
+    }
+
+    .btn-shop{
+        background-color: black;
+        font-family: "New Amsterdam", sans-serif;
+        font-size: 22px;
+        color: #fff;
+        width: 150px;
+        height: 35px;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+
+}
+
+.separador-marcas{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    background-color: black;
+    padding: 25px;
+    height: 130px;
+}
+
+.container-duplo{
+    display: flex;
+    flex-direction: row;
+
+    .container-elsa{
+        .base-frozen{
+            position: relative;
+        }
+        .frozen{
+            position: absolute;
+            left: 25%;
+        }            
+        }
+
+        
+    }
+
+    .container-starwars{
+        .base-star{
+            position: relative;
+        }
+        .rey{
+            position: absolute;
+            right: 25%;
+        }
+
+}
