--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@
     flex-direction: row;
     background-color: black;
     padding: 10px;
-    height: 55px;
-    gap: 45px;
+    height: 65px;
+    gap: 90px;
+    align-items: center;
 
     .funko-logo{
         width: auto;
-        height: fit-content
+        height: fit-content;
+        margin-left: 70px;
     }
 
     a {
@@ -26,14 +28,16 @@
     .search-bar{
         border-radius: 50px;
         width: 15%;
-        height: 30px;
+        height: 32px;
     }
-
+    ::placeholder{
+        color: black;
+    }
     .icons-navbar{
         display: flex;
         flex-direction: row;
-        gap: 25px;
-        align-content: end;
+        gap: 35px;
+        margin-left: 30px;
 
         .icon-img{
             width: auto;
@@ -59,12 +63,12 @@
 
     .overlay-text{
         position: absolute;
-        top: 27%;
-        left: 10%;
+        top: 20%;
+        left: 5%;
     }
     h1{
         font-family: "New Amsterdam", sans-serif;
-        font-size: 35px;
+        font-size: 65px;
         color: #fff;
     }
 
@@ -72,6 +76,7 @@
         font-family: "New Amsterdam", sans-serif;
         font-size: 25px;
         color: #fff;
+        margin-top: 20px;
     }
 
     .btn-shop{
@@ -79,10 +84,11 @@
         font-family: "New Amsterdam", sans-serif;
         font-size: 22px;
         color: #fff;
-        width: 150px;
-        height: 35px;
+        width: 210px;
+        height: 45px;
         border-radius: 20px;
         cursor: pointer;
+        margin-top: 30px;
     }
 }
 
@@ -90,10 +96,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 50px;
+    gap: 100px;
     background-color: black;
-    padding: 25px;
-    height: 130px;
+    padding: 35px;
+    height: 145px;
 }
 
 .container-duplo{
@@ -112,7 +118,22 @@
             position: absolute;
             left: 25%;
             top:50px
-        }            
+        }     
+        
+        p{
+            font-family: "New Amsterdam", sans-serif;
+            position: absolute;
+            top: 65%;
+            left: 5%;
+            color: #fff;
+            font-size: 75px;
+        a{
+            font-family: "New Amsterdam", sans-serif;
+            font-size: 20px;
+            color: #fff;
+        }
+        }
+
         }
     }
 
@@ -128,6 +149,20 @@
             right: 25%;
             top:55px
         }
+
+        p{
+            font-family: "New Amsterdam", sans-serif;
+            position: absolute;
+            top: 65%;
+            left: 75%;
+            color: #fff;
+            font-size: 75px;
+        a{
+            font-family: "New Amsterdam", sans-serif;
+            font-size: 20px;
+            color: #fff;
+        }
+        }
 }
 
 .base-bg-products{
@@ -138,6 +173,8 @@
         color: #fff;
         font-family: "New Amsterdam", sans-serif;
         text-align: center;
+        margin-top: -5px;
+        margin-bottom: 80px;
     }
 
     .container-funkos{
@@ -161,7 +198,22 @@
                 margin: 60px;
 
             .text-row1{
-                color: #fff;                
+                color: #fff;
+                margin-top: 20px;
+
+                h2{
+                    font-family: "New Amsterdam", sans-serif;
+                }
+                
+                p{
+                    font-weight: 600;
+                }
+            }
+
+            .container-btn{
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
 
             .btn-container-funkos{
@@ -169,11 +221,14 @@
                 font-size: 20px;
                 background-color: black;
                 border-radius: 50px;
-                width: 250px;
+                width: 200px;
+                margin-top: 25px;
             
             a{
                 text-decoration: none;
                 color: #fff;
+                text-align: center;
+                margin: 10px 10px 10px 10px;
             }
                 .img-btn-row1{
                     width: 30px;
@@ -189,6 +244,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin: 30px 0 50px 0 ;
 
     .btn-see{
         width: 300px;
